<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isRound"
            type="java.lang.Boolean" />


        <variable
            name="product"
            type="dev.ronnie.adidasandroid.data.entities.Product" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="?attr/colorSurface"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/toolbar_animator"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorSurface"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"
                        app:imageFromUrl="@{product.imgUrl}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shouldRound="@{isRound}" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@{product.name}"
                        android:textColor="#36454F"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/price"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@{String.format(@string/price, product.price)}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/name"
                        app:layout_constraintTop_toBottomOf="@+id/image" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@{product.description}"
                        android:textColor="#343434"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#DCDCDC"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/customer_reviews"
                        android:textAllCaps="true"
                        android:textColor="#6C6F74"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/desc" />


                    <!--                    <View-->
                    <!--                        android:id="@+id/view"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="0.5dp"-->
                    <!--                        android:background="#343434"-->
                    <!--                        app:layout_constraintBottom_toBottomOf="parent" />-->

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIconTint="@color/black"
                    app:title=""
                    app:titleTextColor="?attr/colorOnSurface" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rating_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/rating_item" />


        <TextView
            android:id="@+id/add_review"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/purple_700"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/add_review"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>