<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/rating_hint"
            android:minLines="5"
            android:textAlignment="textStart"
            android:textColor="#1C2C38"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#501C2C38"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_white_background"
            android:foreground="?selectableItemBackground"
            android:text="@android:string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toStartOf="@id/confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_blue_background"
            android:foreground="?selectableItemBackground"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>